--- a/package.json
+++ b/package.json
@@ -3,28 +3,39 @@
   "version": "0.1.0",
   "private": true,
   "license": "MIT",
+  "type": "module",
   "description": "Example React based UI for my medium.com article on using the AWS Cognito built in sign-in and sign-up content. Demonstrates a React router implementation of the callback endpoint, a Redux based credential store, as well as use of the AWS provided libraries.",
-  "homepage": "https://cognito-demo.arronharden.com",  
+  "homepage": "https://cognito-demo.arronharden.com",
   "author": {
     "name": "Arron Harden",
     "email": "post@arronharden.com",
     "url": "https://arronharden.com"
   },
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/arronharden/cognito-demo-ui"
+    "type": "git",
+    "url": "https://github.com/arronharden/cognito-demo-ui"
   },
   "dependencies": {
     "amazon-cognito-auth-js": "^1.3.2",
     "amazon-cognito-identity-js": "^3.0.14",
     "aws-sdk": "^2.498.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "axios": "^0.21.4",
+    "cors": "^2.8.5",
+    "express": "~4.16.1",
+    "json": "^11.0.0",
+    "namor": "^2.0.3",
+    "react": "^16.14.0",
+    "react-bootstrap": "^1.6.4",
+    "react-dom": "^16.14.0",
+    "react-google-button": "^0.7.2",
+    "react-json-to-table": "^0.1.7",
     "react-redux": "^7.1.0",
-    "react-router-dom": "^5.0.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "3.0.1",
+    "react-table": "^7.7.0",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^5.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -46,13 +57,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "eslint-config-standard": "^13.0.1",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-node": "^9.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-standard": "^4.0.0"
   }
 }
