--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "express": "~4.16.1",
     "json": "^11.0.0",
+    "moment": "^2.29.1",
     "namor": "^2.0.3",
     "react": "^16.14.0",
     "react-bootstrap": "^1.6.4",
