--- a/src/config/app-config.json
+++ b/src/config/app-config.json
@@ -11,5 +11,5 @@
         "email",
         "profile"    
     ],
-    "apiUri":"https://ehgxv3vcs8.execute-api.us-east-2.amazonaws.com/prod"
+    "apiUri":"https://u6bkhgokv3.execute-api.us-east-2.amazonaws.com/prod"
 }
